# cp.nvim

./: .busted  .envrc  .gitignore  .luarc.json  .luarocks  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  README.md  command_parsing_spec.lua  config_spec.lua  cp.nvim-scm-1.rockspec  pyproject.toml  readme.md  script.py  selene.toml  test_panel_spec.lua  vim.toml
doc/: cp-nvim.txt  cp.nvim.txt  cp.txt  tags
ftdetect/: cp.lua
plugin/: cp.lua
scrapers/: __init__.py  atcoder.py  base.py  clients.py  codechef.py  codeforces.py  cses.py  models.py
scripts/: interact.py
spec/: _helpers.lua  ansi_diff_spec.lua  ansi_spec.lua  async_init_spec.lua  async_integration_spec.lua  async_jobs_spec.lua  async_scraper_spec.lua  async_setup_spec.lua  bootstrap_spec.lua  cache_spec.lua  command_flow_spec.lua  command_parsing_spec.lua  config_spec.lua  diff_spec.lua  error_boundaries_spec.lua  error_handling_spec.lua  execute_spec.lua  extmark_spec.lua  fzf_lua_spec.lua  health_spec.lua  health_version_spec.lua  highlight_spec.lua  init_spec.lua  integration_spec.lua  interact_spec.lua  navigation_spec.lua  panel_spec.lua  picker_spec.lua  plugin_spec.lua  problem_spec.lua  restore_spec.lua  run_panel_integration_spec.lua  run_panel_spec.lua  run_render_spec.lua  run_spec.lua  runner_system_spec.lua  scraper_spec.lua  snippets_spec.lua  spec_helper.lua  state_contract_spec.lua  (+3 more)
templates/: compile_flags.txt  debug_flags.txt  makefile
test/: plugin_spec.lua
tests/: cache_spec.lua  command_parsing_spec.lua  config_spec.lua  conftest.py  execute_spec.lua  (+8 more)
(+110 files in other folders)
