[project]
name = "scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.5",
    "cloudscraper>=1.2.71",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=4.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
