[project]
name = "scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "curl-cffi>=0.13.0",
    "httpx>=0.28.1",
    "ndjson>=0.3.1",
    "requests>=2.32.5",
    "scrapling[fetchers]>=0.3.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=4.3.0",
    "basedpyright>=1.31.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
